--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+
+<body {% extends "base.html" %} >
 
 {% block content %}
     <h1>Sign In</h1>
@@ -21,4 +23,4 @@
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
     </form>
-{% endblock %}
+</body {% endblock %} 
