--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
+
 
 <body {% extends "base.html" %} >
 
@@ -25,4 +26,4 @@
         <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
 
     </form>
-</body {% endblock %} 
+</body {% endblock %}>
