--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -23,7 +23,7 @@
         </p>
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
-        <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+        <p>New User? <a href="register.html">Click to Register!</a></p>
 
     </form>
 </body {% endblock %}>
