--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,8 +1,5 @@
 {% extends "base.html" %}
 
-
-<body {% extends "base.html" %} >
-
 {% block content %}
     <h1>Sign In</h1>
     <form action="" method="post" novalidate>
@@ -23,7 +20,5 @@
         </p>
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
-        <p>New User? <a href="register.html">Click to Register!</a></p>
-
     </form>
-</body {% endblock %}>
+{% endblock %}
