--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,22 +1,21 @@
-<html>
+ <html>
     <head>
         {% if title %}
-        <title>{{ title }} - microblog</title>
+        <title>{{ title }} - Microblog</title>
         {% else %}
-        <title>microblog</title>
+        <title>Welcome to Microblog</title>
         {% endif %}
     </head>
     <body>
         <div>
             Microblog:
-            <a href="index.html">Home</a>
+            <a href="{{ url_for('index') }}">Home</a>
             {% if current_user.is_anonymous %}
-            <a href="login.html">Login</a>
+            <a href="{{ url_for('login') }}">Login</a>
             {% else %}
-            <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
             <a href="{{ url_for('logout') }}">Logout</a>
             {% endif %}
-          </div>
+        </div>
         <hr>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -28,7 +27,5 @@
         {% endif %}
         {% endwith %}
         {% block content %}{% endblock %}
-       
     </body>
 </html>
-
