--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>An unexpected error has occurred</h1>
-    <p>The administrator has been notified. Sorry for the inconvenience!</p>
+    <h1>Un Error inesperado a Ocurrido</h1>
+    <p>Se notifico al Administrador. Disculpa Papu!</p>
     <p><a href="{{ url_for('index') }}">Back</a></p>
 {% endblock %}
