--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,6 +16,7 @@
             <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
             <a href="{{ url_for('bajausuario') }}">Baja de Usuarios</a>
             <a href="{{ url_for('editarusuario') }}">Editar Usuario</a>
+            <a href="{{ url_for('objetivos') }}">Objetivos</a>
             <a href="{{ url_for('logout') }}">Logout</a>
             {% endif %}
         </div>
