--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,4 +2,9 @@
 
 {% block content %}
     <h1>Hola!, {{ current_user.username }}!</h1>
+    
+    <p>Objetivos Asignados</p>
+    {% for p in objetivos %}
+     <p>{{ p.nombre }}</p>
+    {% endfor %}
 {% endblock %}
