subiendo eliminar objetivos

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,7 @@
             <a href="{{ url_for('bajausuario') }}">Baja de Usuarios</a>
             <a href="{{ url_for('editarusuario') }}">Editar Usuario</a>
             <a href="{{ url_for('objetivos') }}">Objetivos</a>
+            <a href="{{ url_for('eliminarobjetivos') }}">Eliminar Objetivos</a>
             <a href="{{ url_for('logout') }}">Logout</a>
             {% endif %}
         </div>
